--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -758,5 +758,7 @@
     <string name="pref_wm8994_control_enable_summary">Enable advanced controls for the WM8994 sound processor hardware</string>
     <string name="pref_wm8994_speaker_tuning_title">Tune speaker for music</string>
     <string name="pref_wm8994_speaker_tuning_summary">Reconfigures the hardware EQ to get more bass and balanced sound</string>
+    <string name="pref_wm8994_mono_downmix_title">Mono downmix</string>
+    <string name="pref_wm8994_mono_downmix_summary">Downmix stereo sound to mono (for stereo outputs, such as headphones)</string>
 
 </resources>
