--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -760,5 +760,15 @@
     <string name="pref_wm8994_speaker_tuning_summary">Reconfigures the hardware EQ to get more bass and balanced sound</string>
     <string name="pref_wm8994_mono_downmix_title">Mono downmix</string>
     <string name="pref_wm8994_mono_downmix_summary">Downmix stereo sound to mono (for stereo outputs, such as headphones)</string>
+    <string name="pref_wm8994_stereo_expansion_title">Stereo expansion</string>
+    <string name="pref_wm8994_stereo_expansion_summary">"Expand" stereo sound via digital signal processing</string>
+    <string name="pref_wm8994_dac_direct_title">D/AC direct</string>
+    <string name="pref_wm8994_dac_direct_summary">Access digital/analog converter directly, bypassing the channel mixer. Produces cleaner audio (lower signal-to-noise ratio)</string>
+    <string name="pref_wm8994_dac_osr128_title">Hi-fi playback</string>
+    <string name="pref_wm8994_dac_osr128_summary">Digital-to-analog converter 128x oversampling -- cleaner sound when playing music</string>
+    <string name="pref_wm8994_adc_osr128_title">Hi-fi recording</string>
+    <string name="pref_wm8994_adc_osr128_summary">Analog-to-digital converter 128x oversampling -- increases quality of recordings</string>
+    <string name="pref_wm8994_fll_tuning_title">Tuned audio clock</string>
+    <string name="pref_wm8994_fll_tuning_summary">Use tuned WM8994 audio clock source -- improves quality of sound</string>
 
 </resources>
